find_package(OpenSSL REQUIRED)

add_executable(secure_websocket_client_test secure_websocket_client_test.cpp)

target_link_libraries(secure_websocket_client_test PRIVATE project_options)
target_link_libraries(secure_websocket_client_test PRIVATE project_features)
target_link_libraries(secure_websocket_client_test PRIVATE GTest::gtest_main)
target_link_libraries(secure_websocket_client_test PRIVATE secure_websocket_client)
target_link_libraries(secure_websocket_client_test PRIVATE executor)

target_include_directories(secure_websocket_client_test PRIVATE ${PROJECT_SOURCE_DIR}/src)

target_compile_definitions(secure_websocket_client_test PRIVATE
  TEST_CERT_DIR="${CMAKE_CURRENT_SOURCE_DIR}/certs")

target_link_libraries(secure_websocket_client_test PRIVATE OpenSSL::SSL)

set_target_properties(secure_websocket_client_test PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
)

gtest_discover_tests(secure_websocket_client_test)
